compiler/tests/fixtures/compile_errors/continue_without_loop.fe
contract Foo:

    pub def bar():
        continue
